fix: update the text content of website

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -2,7 +2,7 @@
   <nav class="navbar hidden navbar--desktop">
     <div class="container inline-padding container--navbar">
       <section class="navbar__logo">
-        <a href="/index.html">
+        <a href="/">
           <img src="/assets/svg/logoipsum.svg" alt="logo">
         </a>
       </section>
