--- a/src/about.njk
+++ b/src/about.njk
@@ -9,18 +9,20 @@ layout: 'mainlayout.njk'
     <h1 class="hero-header__title animatedObj">About Me</h1>
   </div>
 </section>
-
 <section class="container inline-padding about__heading">
-  <h2 class="about__title">Work with the world class specialist</h2>
+  <h2 class="about__title">Work with Jessie</h2>
   <div>
     <div class="about__text">
-      <p>3 Sentence Intro about Sister</p>
-      <p>- when is your journey started</p>
-      <p>- why and how do you choose makeup as a profession</p>
-      <p>- what have you achieved? whatkind of style you learnt? what you have learnt from other</p>
+      <p>Hi, I'm Jessie.</p>
+      <p>My makeup journey began 5 years ago when I discovered my love for transforming faces into works of art. Eager to
+        expand my skills and knowledge, I enrolled in an international beauty school, where my passion quickly evolved into a
+        professional career.</p>
+      <p>For over 5 years now, I've been dedicated to helping women feel confident and embrace their unique beauty through
+        makeup artistry. I've had the privilege of learning from top industry stylists in Malaysia, continually refining my
+        craft to stay current with the latest techniques and create timeless, stunning looks.</p>
     </div>
     <div class="about__labelname about__labelname--first">
-      <p class="about__number">100+</p>
+      <p class="about__number">200+</p>
       <span class="about__label uppercase">Happy Clients</span>
     </div>
     <div class="about__labelname">
@@ -29,8 +31,6 @@ layout: 'mainlayout.njk'
     </div>
   </div>
 </section>
-
-
 <section class="reasons">
   <div class="container container--reasons">
     <div class="reasons__side">
@@ -43,49 +43,42 @@ layout: 'mainlayout.njk'
       <div>
         <p class="reasons__number">01/</p>
         <h4 class="reasons__reason text--large">
-          Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          You are welcome in our studio or we travel to you
         </h4>
       </div>
       <div>
-        <p class="reasons__number">01/</p>
+        <p class="reasons__number">02/</p>
         <h4 class="reasons__reason text--large">
-          Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          I use professional and high-end cosmetic brands
         </h4>
       </div>
       <div>
-        <p class="reasons__number">01/</p>
+        <p class="reasons__number">03/</p>
         <h4 class="reasons__reason text--large">
-          Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          I won’t leave you hanging! I stay in touch during the whole process
         </h4>
       </div>
       <div>
-        <p class="reasons__number">01/</p>
+        <p class="reasons__number">04/</p>
         <h4 class="reasons__reason text--large">
-          Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          I guide you throughout the process to achieve the best results
         </h4>
       </div>
       <div>
-        <p class="reasons__number">01/</p>
+        <p class="reasons__number">05/</p>
         <h4 class="reasons__reason text--large">
-          Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          I enhance your natural beauty and highlight your best features
         </h4>
       </div>
       <div>
-        <p class="reasons__number">01/</p>
+        <p class="reasons__number">06/</p>
         <h4 class="reasons__reason text--large">
-          Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-        </h4>
-      </div>
-      <div>
-        <p class="reasons__number">01/</p>
-        <h4 class="reasons__reason text--large">
-          Reason 1: Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          I work closely with you and welcome your makeup suggestions
         </h4>
       </div>
     </div>
   </div>
 </section>
-
 <section class="portfolio--secondary container inline-padding">
   <div class="portfolio__text-container">
     <h2 class="portfolio__title text-center">My clients</h2>
