--- a/src/services.njk
+++ b/src/services.njk
@@ -9,7 +9,6 @@ layout: 'mainlayout.njk'
     <h1 class="hero-header__title animatedObj">Services</h1>
   </div>
 </section>
-
 <!-- service content -->
 <section class="container inline-padding services__types">
   <section class="services__type">
@@ -20,54 +19,51 @@ layout: 'mainlayout.njk'
         <p class="service__number">01/</p>
         <h2 class="service__name">Wedding Look</h2>
         <p class="service__description">
-          With this package we will do a trial make up way in a advance your wedding day. Having a practice run
-          will
-          ensure you’re happy with the look you are going to have on your wedding day.
+          With this package we will do a trial make up way in a advance your wedding day. Having a practice run will ensure you’re
+          happy with the look you are going to have on your wedding day.
         </p>
       </div>
       <div class="service__price-list">
         <div class="service__price-listitem">
           <div class="service__labelname">
             <span class="service__label">makeup</span>
-            <span class="service__info text-small">additional info(travel fee)...</span>
+            <span class="service__info text-small">Additional info(travel fee)...</span>
           </div>
           <hr class="service__line service__line--2">
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Bridal makeup</span>
+            <span class="service__pricetag">$300</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Bridesmaid</span>
+            <span class="service__pricetag">$170</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Groom</span>
+            <span class="service__pricetag">$100</span>
           </div>
         </div>
-
       </div>
       <div class="service__price-list">
         <div class="service__price-listitem">
           <div class="service__labelname">
-            <span class="service__label">makeup</span>
+            <span class="service__label">hairstyle</span>
             <span class="service__info text-small">additional info(travel fee)...</span>
           </div>
           <hr class="service__line service__line--2">
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Bride</span>
+            <span class="service__pricetag">$250</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Bridesmaid</span>
+            <span class="service__pricetag">$170</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Groom</span>
+            <span class="service__pricetag">$100</span>
           </div>
         </div>
-
       </div>
       <button class="btn btn--icon cta">
         <span>Schedule Consultation</span>
@@ -75,52 +71,75 @@ layout: 'mainlayout.njk'
       </button>
     </div>
   </section>
-
   <section class="services__type">
     <img class="services__type-image" src="/assets/jessie_photos/portfolio-img1.webp" alt="<placeholder>">
     <div class="service">
       <hr class="service__line">
       <div class="service__text-section">
-        <p class="service__number">01/</p>
-        <h2 class="service__name">Wedding Look</h2>
+        <p class="service__number">02/</p>
+        <h2 class="service__name">Photoshoots</h2>
         <p class="service__description">
-          With this package we will do a trial make up way in a advance your wedding day. Having a practice run
-          will
-          ensure you’re happy with the look you are going to have on your wedding day.
+          We prep you for any type of photoshoot: family, maternity, professional, lifestyle, engagement and more. Feel confident
+          and beautiful with the look personalized for you!
         </p>
       </div>
       <div class="service__price-list">
         <div class="service__price-listitem">
           <div class="service__labelname">
-            <span class="service__label">makeup</span>
-            <span class="service__info text-small">additional info(travel fee)...</span>
+            <span class="service__label">PRICE LIST</span>
           </div>
           <hr class="service__line service__line--2">
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Makeup</span>
+            <span class="service__pricetag">$200</span>
           </div>
           <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
-          </div>
-          <div class="service__labelname">
-            <span class="service__customer">Bride(trial included)</span>
-            <span class="service__pricetag">$450</span>
+            <span class="service__customer">Hairstyle</span>
+            <span class="service__pricetag">$170</span>
           </div>
         </div>
-
       </div>
-
       <button class="btn btn--icon cta">
         <span>Schedule Consultation</span>
         <img src="/assets/svg/arrow.svg" alt="arrow">
       </button>
     </div>
   </section>
-
+  <section class="services__type">
+    <img class="services__type-image" src="/assets/jessie_photos/portfolio-img1.webp" alt="<placeholder>">
+    <div class="service">
+      <hr class="service__line">
+      <div class="service__text-section">
+        <p class="service__number">03/</p>
+        <h2 class="service__name">Editorial Photoshoot</h2>
+        <p class="service__description">
+          Professional makeup and hairstyle for editorials photoshoot. I will do a makeup that will look outstanding on the
+          magazine, promotional advertisement, or social media. It’s time to create a perfect look for your brand or portfolio.
+        </p>
+      </div>
+      <div class="service__price-list">
+        <div class="service__price-listitem">
+          <div class="service__labelname">
+            <span class="service__label">PRICE LIST</span>
+          </div>
+          <hr class="service__line service__line--2">
+          <div class="service__labelname">
+            <span class="service__customer">Full look per model</span>
+            <span class="service__pricetag">from $300</span>
+          </div>
+          <div class="service__labelname">
+            <span class="service__customer">Full day</span>
+            <span class="service__pricetag">from $600</span>
+          </div>
+        </div>
+      </div>
+      <button class="btn btn--icon cta">
+        <span>Schedule Consultation</span>
+        <img src="/assets/svg/arrow.svg" alt="arrow">
+      </button>
+    </div>
+  </section>
 </section>
-
 <section class="portfolio--secondary container inline-padding">
   <div class="portfolio__text-container">
     <h2 class="portfolio__title text-center">My clients</h2>
@@ -129,7 +148,9 @@ layout: 'mainlayout.njk'
       <img src="/assets/svg/arrow.svg" alt="arrow">
     </button>
   </div>
-  <div class="portfolio__images">
+  <div
+    class="portfolio__images">
+    {# link to instagram posts #}
     <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
     <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
     <img class="portfolio__image" src="/assets/images/header__img.webp" alt="">
